...
    <string name="cancel">Cancel</string>

    <string name="time_hour">h</string>
    <string name="time_minute">m</string>
    <string name="time_second">s</string>

    <string name="untracked_time_name">Untracked</string>
    <string name="uncategorized_time_name">Uncategorized</string>
    <string name="multitask_time_name">Multitask</string>
    <string name="record_types_empty">No activities added</string>
    <string name="record_tag_selection_hint">Select record tag</string>
    <string name="time_now">Now</string>
    <string name="cannot_be_in_the_future">Time cannot be in the future</string>
...
    <string name="change_record_split">Divide</string>
    <string name="change_record_split_hint">Will cut current record into two at the specified point in time</string>
    <string name="change_record_continue">Continue</string>
    <string name="change_record_continue_hint">Will remove current record and continue tracking this activity</string>
    <string name="change_record_repeat">@string/running_records_repeat</string>
    <string name="change_record_repeat_hint">Will repeat tracking this activity</string>
    <string name="change_record_duplicate">Duplicate</string>
    <string name="change_record_duplicate_hint">Will create a copy of this record</string>
    <string name="change_record_merge">Merge</string>
    <string name="change_record_merge_hint">Will add this time to previous record</string>
    <string name="change_record_adjust">Change</string>
    <string name="change_record_change_prev_record">Also change time of previous record</string>
    <string name="change_record_change_adjacent_records">Also change time of adjacent records</string>
...
