...
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@id/btnChangeRecordFavouriteComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etChangeRecordCommentField"
            style="@style/EditTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_record_comment_hint" />

    </com.google.android.material.textfield.TextInputLayout>
...
